package ex0.algo;

import ex0.CallForElevator;

public class NodeD {

    int floor;
    CallForElevator c;

    public NodeD(int floor, CallForElevator c){
        this.c = c;
        this.floor = floor;
    }
}
